# picovco

./: .devcontainer.json  .gitignore  .gitmodules  CMakeLists.txt  flake.nix
src/: gpio.pio  picovco.c  tusb_config.h  usb_descriptors.c
